start brm protocol implementation

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,9 @@ src/pclint/pclint
 src/gui/gui.app
 src/render2cut/render2cut
 src/cut2epilog/cut2epilog
+src/cut2brm/cut2brm
 src/import2cut/import2cut
 
 .qmake.stash
 
+.vscode/
